--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<!-- <base href="/"> -->
+	<base href="/">
 	<title>Домашнее задание к уроку - 6</title>
 	<meta name="description" content="HTML/CSS. Интерактивный курс 2021/05/24">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
