--- a/error.html
+++ b/error.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
-	<title>Контакты - Домашнее задание к уроку - 5</title>
+	<title>Error - Домашнее задание к уроку - 6</title>
 	<meta name="description" content="HTML/CSS. Интерактивный курс 2021/05/24">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="images/favicon.png">
@@ -21,7 +21,7 @@
 	<div class="container">
 		<nav class="header__navigation">
 	<ul class="header__menu menu">
-		<li class="menu__item"><a href="/" class="menu__link icon icon-logo blick"></a></li>
+		<li class="menu__item"><a href="index.html" class="menu__link icon icon-logo blick"></a></li>
 		<li class="menu__item"><a href="error.html" class="menu__link icon icon-contacts blick"></a></li>
 	</ul>
 </nav>
