--- a/error.html
+++ b/error.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
-	<title>Error - Домашнее задание к уроку - 6</title>
+	<title>Контакты - Домашнее задание к уроку - 7</title>
 	<meta name="description" content="HTML/CSS. Интерактивный курс 2021/05/24">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="images/favicon.png">
@@ -18,25 +18,26 @@
 	
 
 <header class="header contacts-header">
-	<div class="container">
-		<nav class="header__navigation">
-	<ul class="header__menu menu">
-		<li class="menu__item"><a href="index.html" class="menu__link icon icon-logo blick"></a></li>
-		<li class="menu__item"><a href="error.html" class="menu__link icon icon-contacts blick"></a></li>
-	</ul>
-</nav>
-	</div>
+	<nav class="header__navigation contacts-navigation">
+		<div class="container">
+			<ul class="header__menu menu">
+	<li class="menu__item"><a href="index.html" class="menu__link icon icon-logo blick"></a></li>
+	<li class="menu__item"><a href="contacts.html" class="menu__link icon icon-contacts blick"></a></li>
+</ul>
+
+		</div>
+	</nav>
 	<div class="header__info contacts-bg">
-		<div class="container" style="text-align:center;">
+		<div class="container">
 			<h1 class="contacts-title">
-				Sorry
+				I'm Sorry
 			</h1>
 			<p class="contacts-desc">
-				Эту страницу еще не закончил. Заходите позже!
+				Этой страницы не будет! 
 			</p>
 		</div>
 	</div>
-</header>
+</header><!-- End header -->
 <main class="content" style="padding: 64px 0 120px;">
 	<div class="container">
 		<img src="images/dist/error.svg" alt="Error" style=" display: block; margin: 0 auto;">
