--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
-	<title>Домашнее задание к уроку - 6</title>
+	<title>Домашнее задание к уроку - 7</title>
 	<meta name="description" content="HTML/CSS. Интерактивный курс 2021/05/24">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="images/favicon.png">
@@ -20,11 +20,12 @@
 <header class="header home-header">
 	<div class="container home-bg">
 		<nav class="header__navigation">
-	<ul class="header__menu menu">
-		<li class="menu__item"><a href="index. html" class="menu__link icon icon-logo blick"></a></li>
-		<li class="menu__item"><a href="error.html" class="menu__link icon icon-contacts blick"></a></li>
-	</ul>
-</nav>
+			<ul class="header__menu menu">
+	<li class="menu__item"><a href="index.html" class="menu__link icon icon-logo blick"></a></li>
+	<li class="menu__item"><a href="contacts.html" class="menu__link icon icon-contacts blick"></a></li>
+</ul>
+
+		</nav>
 		<div class="header__info">
 			<h1 class="home-title">
 				New Automation<br> Tool for Your
@@ -43,19 +44,19 @@
 		</h3>
 		<div class="cards__box">
 			<div class="cards__item">
-				<img src="images/dist/man.png" alt="Man"  class="cards__img">
+				<img src="images/dist/man.png" alt="Man"  class="cards__img" width="294" height="151">
 				<h4 class="cards__title">Make Your business To Be Better Famous In Internet</h4>
 				<p class="cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<a href="error.html" class="cards__link icon icon-arrow">Learn more</a>
 			</div><!-- End cards__item -->
 			<div class="cards__item">
-				<img src="images/dist/woman-1.png" alt="Woman" class="cards__img">
+				<img src="images/dist/woman-1.png" alt="Woman" class="cards__img" width="294" height="151">
 				<h4 class="cards__title">Bring Technology To Your Comfrotable Home</h4>
 				<p class="cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<a href="error.html" class="cards__link icon icon-arrow">Learn more</a>
 			</div><!-- End cards__item -->
 			<div class="cards__item">
-				<img src="images/dist/woman-2.png" alt="Woman and notebook" class="cards__img">
+				<img src="images/dist/woman-2.png" alt="Woman and notebook" class="cards__img" width="294" height="151">
 				<h4 class="cards__title">Build Your Digital Product That Suitable For Your Need</h4>
 				<p class="cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<a href="error.html" class="cards__link icon icon-arrow">Learn more</a>
@@ -70,15 +71,15 @@
 		<div class="projects__box">
 			<a href="error.html" class="projects__item">
 				<h4 class="projects__title projects__title_right projects__title_big">Smart Home Installation</h4>
-				<img src="images/dist/smart-home.jpg" alt="Smart Home Installation" class="projects__img">
+				<img src="images/dist/smart-home.jpg" alt="Smart Home Installation" class="projects__img" width="1140" height="480">
 			</a><!-- End projects__item -->
 			<a href="error.html" class="projects__item">
 				<h4 class="projects__title projects__title_left">Sparklite App</h4>
-				<img src="images/dist/sparklite-app.jpg" alt="Smart Home Installation" class="projects__img">
+				<img src="images/dist/sparklite-app.jpg" alt="Smart Home Installation" class="projects__img" width="554" height="417">
 			</a><!-- End projects__item -->
 			<a href="error.html" class="projects__item">
 				<h4 class="projects__title projects__title_left">Car-Rapetition App</h4>
-				<img src="images/dist/car-rapetition-app.jpg" alt="Smart Home Installation" class="projects__img">
+				<img src="images/dist/car-rapetition-app.jpg" alt="Smart Home Installation" class="projects__img" width="554" height="417">
 			</a><!-- End projects__item -->
 		</div>
 	</section><!-- End projects -->
