Debugging and code validation

--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 	<!-- <base href="/"> -->
 	<title>Контакты - Домашнее задание к уроку - 5</title>
 	<meta name="description" content="HTML/CSS. Интерактивный курс 2021/05/24">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="images/dist/hero.jpg">
 	<link rel="stylesheet" href="css/main.min.css">
@@ -46,16 +46,20 @@
 				<h4 class="abouts__title">Address</h4>
 				<p class="abouts__text">Id convallis placerat sit sed duis id amet volutpat quam a, pharetra.</p>
 			</div>
-			<ul class="abouts__list">
+			<div>
 				<h4 class="abouts__title">Phone</h4>
+				<ul class="abouts__list">
 				<li class="abouts__list-item"><a href="tel:+781273134321" class="abouts__list-link icon icon-phone">+7-812-7313-4321</a></li>
 				<li class="abouts__list-item"><a href="tel:+781700001234" class="abouts__list-link icon icon-phone">+7-817-0000-1234</a></li>
 			</ul>
-			<ul class="abouts__list">
+			</div>
+			<div>
 				<h4 class="abouts__title">Online service</h4>
-				<li class="abouts__list-item"><a href="http://www.site.com" class="abouts__list-link abouts__list-link_normal icon icon-sphere">www.site.com</a></li>
-				<li class="abouts__list-item"><a href="mailto:hello.site@gmail.com" class="abouts__list-link abouts__list-link_normal icon icon-mail">hello.site@gmail.com</a></li>
-			</ul>
+				<ul class="abouts__list">
+					<li class="abouts__list-item"><a href="http://www.site.com" class="abouts__list-link abouts__list-link_normal icon icon-sphere">www.site.com</a></li>
+					<li class="abouts__list-item"><a href="mailto:hello.site@gmail.com" class="abouts__list-link abouts__list-link_normal icon icon-mail">hello.site@gmail.com</a></li>
+				</ul>
+			</div>
 		</div><!-- End abouts__info -->
 		<form method="POST" autocomplete="off" novalidate class="abouts__message form">
 			<h4 class="form__heading">Send us message</h4>
@@ -75,7 +79,7 @@
 		</form><!-- End abouts__message -->
 	</section>
 	<div class="location">
-		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A563f4433b026827ed0cdbb480dc21cb234c27f5bbb249cb73270e0c154469cad&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
+		<script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A563f4433b026827ed0cdbb480dc21cb234c27f5bbb249cb73270e0c154469cad&amp;width=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
 	</div><!-- End location -->
 </main><!-- End content -->
 
