--- a/error.html
+++ b/error.html
@@ -8,7 +8,7 @@
 	<!-- <base href="/"> -->
 	<title>Контакты - Домашнее задание к уроку - 7</title>
 	<meta name="description" content="HTML/CSS. Интерактивный курс 2021/05/24">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="images/dist/hero.jpg">
 	<link rel="stylesheet" href="css/main.min.css">
