Reload new version.
Updated links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<p class="home-desc">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.
 			</p>
-			<a href="error.html" class="btn header__btn">See Our Project</a>
+			<a href="https://sergey059.github.io/Landing-page-bootstrap_5/" class="btn header__btn">See Bootstrap Project</a>
 		</div>
 	</div>
 </header><!-- End header -->
